# voidm

./: .gitattributes  .gitignore  AGENT.md  ARCHITECTURE_REFACTORING.md  ARCHITECTURE_STATUS.md  AUTORESEARCH_ALL_SESSIONS_FINAL.md  AUTORESEARCH_BOTH_SESSIONS_COMPLETE.md  AUTORESEARCH_FINAL.md  AUTORESEARCH_FINAL_STRATEGY.md  AUTORESEARCH_HYDE_FINAL.md  AUTORESEARCH_RESULTS.md  AUTORESEARCH_SESSION10_RESULTS.md  AUTORESEARCH_SESSION11_RESULTS.md  AUTORESEARCH_SESSION12_RESULTS.md  AUTORESEARCH_SESSION13_RESULTS.md  AUTORESEARCH_SESSION3_CHECKPOINT.md  AUTORESEARCH_SESSION5.md  AUTORESEARCH_SESSION6_PLAN.md  AUTORESEARCH_SESSION6_RESULTS.md  AUTORESEARCH_SESSION7_ANALYSIS.md  AUTORESEARCH_SESSION8_RESULTS.md  AUTORESEARCH_SESSION9_PLAN.md  AUTORESEARCH_SESSION9_RESULTS.md  AUTORESEARCH_SESSION_COMPLETE.md  AUTORESEARCH_SESSION_FINAL.md  AUTORESEARCH_SUMMARY.md  AUTORESEARCH_TAGGING_FINAL.md  AUTORESEARCH_TAGGING_SESSION_FINAL.md  AUTORESEARCH_TINYLLAMA_SUMMARY.md  CACHE_PERSISTENCE_EXPLAINED.md  CACHE_VISUAL_DIAGRAMS.md  CRITICAL_FIX_SESSION_SUMMARY.md  CRITICAL_REVIEW.md  CRITICAL_REVIEW_NEGATIVE_BIAS.md  CURRENT_STATUS.md  Cargo.toml  DEDUPLICATION.md  DEPENDENCY_ANALYSIS.md  FINAL_SESSION_SUMMARY.md  GGUF_ANALYSIS.md  (+102 more)
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.pi/todos/: 2de64ee5.md  4b7d00de.md  609dd188.md
crates/voidm-cli/: Cargo.toml
crates/voidm-cli/src/: cli_config.rs  lib.rs  main.rs  output.rs
crates/voidm-cli/src/commands/: add.rs  chunk.rs  config.rs  conflicts.rs  consolidate.rs  delete.rs  embed.rs  export.rs  get.rs  graph.rs  info.rs  init.rs  instructions.rs  link.rs  list.rs  mcp.rs  migrate.rs  mod.rs  models.rs  ontology.rs  repair.rs  scopes.rs  search.rs  stats.rs  unlink.rs  update.rs  validate.rs
crates/voidm-cli/templates/: graph_d3.html
crates/voidm-cli/tests/: config_hierarchy.rs  graph_cypher_cli.rs
crates/voidm-core/: Cargo.toml
crates/voidm-core/src/: agent_feedback.rs  auto_tagger.rs  auto_tagger_tinyllama.rs  auto_tagging.rs  chunk_nodes.rs  chunking.rs  coherence.rs  concept_clustering.rs  concept_deduplication.rs  concept_extraction.rs  concept_hierarchy.rs  concept_linking.rs  concept_ranking.rs  concept_telemetry.rs  config.rs  config_loader.rs  context_boosting.rs  crud.rs  crud_logic.rs  crud_trait.rs  db.rs  db_migration.rs  embeddings.rs  export.rs  fast_vector.rs  gguf_model_cache.rs  gguf_query_expander.rs  graph_retrieval.rs  import.rs  importance_boosting.rs  improvement_engine.rs  lib.rs  memory_policy.rs  migrate.rs  migration.rs  migration_export.rs  models.rs  multi_relation_detection.rs  neo4j_db.rs  neo4j_schema.rs  (+25 more)
crates/voidm-core/src/db/: mod.rs  neo4j.rs  sqlite.rs  tests.rs
crates/voidm-core/src/grammars/: quality_features.gbnf
crates/voidm-core/src/query/: cypher.rs  mod.rs  postgres.rs  sqlite.rs  translator.rs
crates/voidm-core/tests/: comparison_benchmark.rs  end_to_end_pipeline_profile.rs  graph_retrieval_integration.rs  migration_integration.rs  ner_quality_benchmark.rs  phase_a.rs  quality_verification.rs  query_expansion_benchmark.rs  reranker_batch_benchmark.rs  rrf_search_benchmark.rs  search_hybrid_grouping.rs  search_mode_comparison.rs  search_retrieval_policy.rs  search_speed_benchmark.rs  semantic_dedup_benchmark.rs  semantic_dedup_twopass_benchmark.rs  validation_real_data.rs  workload_profiler.rs
crates/voidm-db/: Cargo.toml
crates/voidm-db-trait/: Cargo.toml
crates/voidm-db-trait/src/: lib.rs
crates/voidm-db/src/: graph_ops.rs  lib.rs  models.rs
crates/voidm-embeddings/: Cargo.toml
crates/voidm-embeddings/src/: chunking.rs  lib.rs  passage.rs  semantic_dedup.rs
crates/voidm-graph/: Cargo.toml
crates/voidm-graph/src/: analytics.rs  lib.rs  ops.rs  traverse.rs
crates/voidm-graph/src/cypher/: ast.rs  lexer.rs  mod.rs  parser.rs  translator.rs
crates/voidm-mcp/: Cargo.toml  README.md
crates/voidm-mcp/src/: lib.rs
crates/voidm-models/: Cargo.toml
crates/voidm-models/src/: lib.rs
crates/voidm-neo4j/: Cargo.toml
crates/voidm-neo4j/src/: lib.rs  neo4j_db.rs  neo4j_schema.rs
crates/voidm-neo4j/tests/: graph_persistence_integration.rs  jsonl_memory_type_roundtrip.rs  query_cypher_integration.rs  search_integration.rs  stats_integration.rs
crates/voidm-ner/: Cargo.toml
crates/voidm-ner/src/: lib.rs
crates/voidm-nli/: Cargo.toml
crates/voidm-nli/src/: lib.rs
crates/voidm-postgres/: Cargo.toml  README.md
crates/voidm-postgres/src/: lib.rs
crates/voidm-postgres/tests/: integration_test.rs  unit_tests.rs
crates/voidm-query-expansion/: Cargo.toml
crates/voidm-query-expansion/src/: lib.rs
crates/voidm-redactor/: Cargo.toml
crates/voidm-redactor/src/: lib.rs
crates/voidm-reranker/: Cargo.toml
crates/voidm-reranker/src/: lib.rs
crates/voidm-scoring/: Cargo.toml
crates/voidm-scoring/src/: lib.rs
crates/voidm-sqlite/: Cargo.toml  README.md
crates/voidm-sqlite/src/: add_memory_backend.rs  chunk_nodes.rs  deprecated.rs  graph_query_ops_impl.rs  lib.rs  migrate.rs  utils.rs
crates/voidm-sqlite/tests/: auto_tagging_sqlite.rs  canonical_scope_sqlite.rs  generic_entities_sqlite.rs  generic_graph_sqlite.rs  generic_lifecycle_sqlite.rs  hybrid_search_sqlite.rs  jsonl_memory_type_roundtrip.rs  legacy_graph_migration_meta_sqlite.rs  legacy_graph_migration_parity_sqlite.rs  legacy_graph_migration_sqlite.rs  migration_advanced_test.rs  migration_safety_test.rs  scope_add_regression_sqlite.rs  title_search.rs
crates/voidm-tagging/: Cargo.toml
crates/voidm-tagging/src/: lib.rs
docs/: WINDOWS_SETUP.md
migrations/: MIGRATION_SAFETY_GUIDE.md
scripts/: init_neo4j_indexes.cypher  migrate_embeddings_to_list.py
