[workspace]
members = [
    "crates/voidm-core",
    "crates/voidm-graph",
    "crates/voidm-cli", "crates/voidm-ner", "crates/voidm-nli", "crates/voidm-scoring", "crates/voidm-embeddings", "crates/voidm-redactor", "crates/voidm-reranker", "crates/voidm-query-expansion", "crates/voidm-tagging", "crates/voidm-models", "crates/voidm-db", "crates/voidm-sqlite", "crates/voidm-neo4j",
]
resolver = "2"

[workspace.dependencies]
# Storage
sqlx             = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate", "uuid", "chrono"] }
sqlite-vec       = "0.1.7-alpha.10"
libsqlite3-sys   = { version = "0.30", features = ["bundled"] }

# Embeddings + reranker
fastembed        = "5"

# Pattern matching & caching
regex            = "1"
lazy_static      = "1"

# CLI
clap             = { version = "4", features = ["derive", "env"] }
comfy-table      = "7"
colored          = "3"

# Serde / data
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
uuid             = { version = "1", features = ["v4", "v5", "serde"] }
chrono           = { version = "0.4", features = ["serde"] }
toml             = "1"

# Async
tokio            = { version = "1", features = ["full"] }

# Utilities
anyhow           = "1"
thiserror        = "2"
dirs             = "6"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell        = "1"
strsim           = "0.11"
reqwest          = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
