[package]
name = "voidm-cli"
version = "0.8.0"
edition = "2021"
description = "voidm — local-first persistent memory CLI for LLM agents"
license = "MIT"
repository = "https://github.com/autonomous-toaster/voidm"
keywords = ["memory", "llm", "agents", "cli", "embeddings"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "voidm"
path = "src/main.rs"

[dependencies]
voidm-core       = { path = "../voidm-core", default-features = false }
voidm-db   = { path = "../voidm-db" }
voidm-graph      = { path = "../voidm-graph" }
voidm-sqlite     = { path = "../voidm-sqlite" }
voidm-neo4j      = { path = "../voidm-neo4j", default-features = false }
voidm-ner        = { path = "../voidm-ner", optional = true }
voidm-nli        = { path = "../voidm-nli", optional = true }
voidm-redactor   = { path = "../voidm-redactor", optional = true }
voidm-embeddings = { path = "../voidm-embeddings", optional = true }
voidm-reranker   = { path = "../voidm-reranker", optional = true }
clap             = { workspace = true }
comfy-table      = { workspace = true }
colored          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
tokio            = { workspace = true }
toml             = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest          = { workspace = true }
dirs             = { workspace = true }
rmcp = { version = "1.1", features = ["server", "macros", "transport-io", "schemars"] }

[features]
default = ["standard"]

# Supported high-level build profiles:
# - minimal  : lean local CLI
# - standard : recommended default
# - full     : maximal curated profile
minimal = ["database-sqlite"]
standard = ["embeddings", "query-expansion", "nli", "ner", "reranker", "tinyllama", "redactor", "database-sqlite"]
full = ["standard", "database-neo4j", "mcp", "llama-cpp"]

# ─────────────────────────────────────────────────────────────────────────────
# INDIVIDUAL FEATURES (compose your own)
# ─────────────────────────────────────────────────────────────────────────────

# Lower-level feature toggles are kept for local/dev composition,
# but public docs should prefer the three profiles above.
database-sqlite = []
database-neo4j  = []
embeddings      = []
vector-search   = ["embeddings"]
query-expansion = ["voidm-core/query-expansion"]
llama-cpp       = ["voidm-core/llama-cpp"]
nli             = ["voidm-nli"]
ner             = ["voidm-core/ner", "voidm-ner", "voidm-neo4j/ner"]
reranker        = ["voidm-core/reranker", "voidm-reranker"]
mcp             = []
redactor        = []
tinyllama       = ["voidm-core/tinyllama", "voidm-neo4j/tinyllama"]
