[package]
name = "voidm-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for voidm memory system"

[dependencies]
rmcp = { version = "1.1", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

voidm-core = { path = "../voidm-core", default-features = false }
voidm-db = { path = "../voidm-db" }
voidm-sqlite = { path = "../voidm-sqlite" }

[features]
default = ["sqlite"]
sqlite = []
