[package]
name = "voidm-ner"
version = "0.1.0"
edition = "2021"
description = "Named Entity Recognition (NER) for voidm"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
ort = { version = "2.0.0-rc.10" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokenizers = { version = "0.15" }
hf-hub = { version = "0.3", features = ["tokio"] }
sqlx = { workspace = true }
voidm-embeddings = { path = "../voidm-embeddings" }
voidm-models = { path = "../voidm-models" }
