[package]
name = "voidm-nli"
version = "0.1.0"
edition = "2021"
description = "Natural Language Inference (NLI) for relation classification in voidm"
publish = false

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
ort = "=2.0.0-rc.10"
once_cell = "1.19"
tokenizers = "0.15"
hf-hub = "0.3"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
voidm-embeddings = { path = "../voidm-embeddings" }
voidm-models = { path = "../voidm-models" }

[dev-dependencies]
