[package]
name = "voidm-query-expansion"
version = "0.1.0"
edition = "2021"
description = "Query expansion using small generative LLMs for voidm"
publish = false

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
ort = "2.0.0-rc.10"
hf-hub = { version = "0.5", features = ["tokio"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
voidm-models = { path = "../voidm-models" }

[dev-dependencies]
