[package]
name = "voidm-scoring"
version = "0.1.0"
edition = "2021"
description = "Quality scoring and rating system for memories in voidm"
publish = false

[dependencies]
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.voidm-ner]
path = "../voidm-ner"
optional = true

[features]
default = []
ner = ["voidm-ner"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
