[package]
name = "voidm-tagging"
version = "0.1.0"
edition = "2021"
description = "Tag-based automatic linking for voidm memories"
publish = false

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
